<resources>
    <string name="app_name">Proyecto Final V2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ajustes</string>

    <string name="Correr">Running</string>
    <string name="Ciclismo">Ciclismo</string>
    <string name="Natacion">Natacino</string>
    <string name="Pesas">Pesas</string>
    <string name="Fuerza">Fuerza</string>
    <string name="run400m">400m</string>
    <string name="chooseRun">Elige la distancia</string>
    <string name="enterdata">Ingres los datos de la carrera</string>
</resources>
