<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_carrera"
            android:icon="@drawable/running"
            android:title="@string/Correr"> </item>
        <item
            android:id="@+id/nav_ciclismo"
            android:icon="@drawable/cycling"
            android:title="@string/Ciclismo" />
        <item
            android:id="@+id/nav_natacion"
            android:icon="@drawable/swimming"
            android:title="@string/Natacion" />
        <item
            android:id="@+id/nav_pesas"
            android:icon="@drawable/weightlifting"
            android:title="@string/Pesas" />
        <item
            android:id="@+id/nav_fuerza"
            android:icon="@drawable/strength"
            android:title="@string/Fuerza" />
    </group>

 <!--   <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
